# triplen

./: .gitignore  README.md  _batchrun.sh  _run.sh  anatomical.m  audit-eigen.ipynb  cluster_profiles.py  combine_data.py  compute_ncsnr.ipynb  conda-imports.txt  crossval.py  eda.ipynb  eda.m  eda.py  edit_data.py  eigenspectra.py  environment.yml  exploring_data.ipynb  freq.m  kmeans.ipynb  load_data.ipynb  main.py  manifold_diagram.ipynb  neighbor_scales.py  nm2_template.ipynb  nsd.ipynb  pyproject.toml  scidb_url.txt  stretching.ipynb  test_url.txt  tixti_utils.py  unify_data.py  utils-models.py  utils.py  utils_standard.py  utils_txt.py  variance_partition.py
Demo/: Demo1_show_example.m  Demo2_extract_ROI.m  build_img_pool.m  eda.m  exclude_area.xls
alexnet/: ROI_pc_space.ipynb  compute_centroids.py  extract_features.py  layers.txt  loading.ipynb  locality_layers.py  locality_test.py  neighbor_scales.py  pc_space.ipynb  plot_centroids.py  roi_centroids.py  roi_neighbor_sets.py  tuning_axes.ipynb
aux_controls/: .Rhistory  sampling_strength.ipynb  sampling_strength.py  sampling_strength_summary.csv  stats.R
demo/: Demo2_extract_ROI.m
denoise/: _gsn.py  _ss-gsn.py  gsn.ipynb  kmeans.ipynb  save_raster_jp.py  single-sess-gsn.ipynb  single_session_gsn.py
dsa/: category_dmd.ipynb  dmd.ipynb  image_dmd.ipynb  mr-dmd.ipynb  pc_time.ipynb  princip_comps.ipynb  trajectory.ipynb  velocity.ipynb
dynamic_modes/: _run.py  dmd.ipynb  eigenspectra.py  interpret.ipynb  princip_comps.ipynb  psn.ipynb  scale_dmd.ipynb  scale_dynamics.ipynb  scale_pca.ipynb  scale_responses.ipynb  shifting_subspace.py  sparsity.py  static_subspace.py  subspaces.ipynb  temporal_coherence.py  testing.py  time_trace.ipynb  tuning_subspaces.ipynb  (+2 more)
(+92 files in other folders)
