[project]
name = "manifold-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.42.51",
    "gsn",
    "h5py>=3.14.0",
    "imageio>=2.37.2",
    "matplotlib>=3.9.4",
    "nibabel>=5.3.3",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "pyvista>=0.46.5",
    "s3fs>=0.4.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.2",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ['src/manifold_dynamics']

[tool.hatch.build.targets.sdist]
include = ['src/manifold_dynamics', 'README.md', 'pyproject.toml']

[tool.uv.sources]
gsn = { git = "https://github.com/cvnlab/GSN.git" }

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
